src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>c2g__CODABankIBANNumber__c</fullName>
        <description>The IBAN number</description>
        <label>Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankName__c</fullName>
        <description>The name of the bank</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankPhone__c</fullName>
        <description>The bank phone number</description>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSWIFTNumber__c</fullName>
        <description>The SWIFT or similar number</description>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSortCode__c</fullName>
        <description>The sort code / bank identifier</description>
        <label>Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStateProvince__c</fullName>
        <description>The state / county / province</description>
        <label>Bank State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankZipPostalCode__c</fullName>
        <description>The postal code</description>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 2</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 3</label>
        <picklist>
            <picklistValues>
                <fullName>End of Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start of Next Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(BillingStreet) &amp;&amp;
ISBLANK(BillingCity) &amp;&amp;
ISBLANK(BillingState) &amp;&amp;
ISBLANK(BillingPostalCode) &amp;&amp;
ISBLANK(BillingCountry)) &amp;&amp;
c2g__CODAValidatedBillingStreet__c == BillingStreet &amp;&amp;
c2g__CODAValidatedBillingCity__c == BillingCity &amp;&amp;
c2g__CODAValidatedBillingState__c == BillingState &amp;&amp;
c2g__CODAValidatedBillingPostCode__c == BillingPostalCode &amp;&amp;
c2g__CODAValidatedBillingCountry__c == BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingMethod__c</fullName>
        <description>The billing method</description>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditAgency__c</fullName>
        <description>The name of the credit agency</description>
        <label>Credit Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to enable the credit limit</description>
        <label>Credit Limit Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitReviewed__c</fullName>
        <description>The date when the limit was last reviewed</description>
        <label>Credit Limit Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimit__c</fullName>
        <description>The credit limit in org currency</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The manager responsible for the credit details</description>
        <label>Credit Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRatingReviewed__c</fullName>
        <description>The date the rating was last reviewed</description>
        <label>Credit Rating Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRating__c</fullName>
        <description>The rating given by the credit agency</description>
        <label>Credit Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditReference__c</fullName>
        <description>The reference at the credit agency</description>
        <label>Credit Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditStatus__c</fullName>
        <description>The current credit status. The picklist is user-definable</description>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Allowed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash with Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADefaultExpenseAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default GLA on expense lines.</description>
        <label>Default Expense Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Default Expense Account)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription2__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription3__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount of discount to be applied</description>
        <label>Discount 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount2__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount3__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAECCountryCode__c</fullName>
        <label>Tax Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAEntityUseCode__c</fullName>
        <label>Entity / Use Code</label>
        <picklist>
            <picklistValues>
                <fullName>A - Federal government - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - State government - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Tribe / Status Indian / Indian Band - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Foreign diplomat - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - Charitable or benevolent org - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Religious or educational org - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - Resale - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H - Commercial agricultural production - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I - Industrial production / manufacturer - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J - Direct pay permit - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K - Direct mail - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L - Other - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N - Local government - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P - Commercial aquaculture - Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q - Commercial Fishery - Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R - Non-resident - Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExemptionCertificate__c</fullName>
        <label>Exemption Certificate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAFederallyReportable1099__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Federally Reportable 1099</description>
        <label>Federally Reportable 1099</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAFinanceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Federal Income Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Medical and Healthcare Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Crop Insurance Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Unused 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Unused 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Excess Golden Parachute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reportable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Input VAT Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInvoiceEmail__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__CODAMergeId__c</fullName>
        <label>Merge Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAOutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPaymentMethod__c</fullName>
        <description>The payment method</description>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - SREC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - Green Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check - Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAReportingCode__c</fullName>
        <description>A unique code used for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAShippingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(ShippingStreet) &amp;&amp;
ISBLANK(ShippingCity) &amp;&amp;
ISBLANK(ShippingState) &amp;&amp;
ISBLANK(ShippingPostalCode) &amp;&amp;
ISBLANK(ShippingCountry)) &amp;&amp;
c2g__CODAValidatedShippingStreet__c == ShippingStreet &amp;&amp;
c2g__CODAValidatedShippingCity__c == ShippingCity &amp;&amp;
c2g__CODAValidatedShippingState__c == ShippingState &amp;&amp;
c2g__CODAValidatedShippingPostCode__c == ShippingPostalCode &amp;&amp;
c2g__CODAValidatedShippingCountry__c == ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCalculationMethod__c</fullName>
        <description>The method of calculating tax in the UK.</description>
        <label>Tax Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Gross</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net of Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
        <description>Taxpayer Identification Number</description>
        <label>Taxpayer Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
        <label>VAT Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATStatus__c</fullName>
        <label>Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EC Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC Non-registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCity__c</fullName>
        <label>ValidatedBillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCountry__c</fullName>
        <label>ValidatedBillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingPostCode__c</fullName>
        <label>ValidatedBillingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingState__c</fullName>
        <label>ValidatedBillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
        <label>ValidatedBillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCity__c</fullName>
        <label>ValidatedShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
        <label>ValidatedShippingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
        <label>ValidatedShippingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingState__c</fullName>
        <label>ValidatedShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingStreet__c</fullName>
        <label>ValidatedShippingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountParticulars__c</fullName>
        <label>Account Particulars</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankBIC__c</fullName>
        <label>Bank BIC</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCode__c</fullName>
        <label>Payment Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCountryISO__c</fullName>
        <label>Payment Country ISO</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentPriority__c</fullName>
        <label>Payment Priority</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentRoutingMethod__c</fullName>
        <label>Payment Routing Method</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffhc__OriginalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Account.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Rootstock_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rootstock Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Rootstock_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rootstock Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>